fix: fixed bottom hud overlap on mobile screen

--- a/src/styles/Developers.module.scss
+++ b/src/styles/Developers.module.scss
@@ -69,7 +69,8 @@
   // height: 5vw;
   object-fit: contain;
 
-  @media screen and (max-height: 700px), screen and (max-width: 1100px) {
+  @media screen and (max-height: 700px),
+  screen and (max-width: 1100px) {
     top: 6px;
     height: 40px;
   }
@@ -127,7 +128,8 @@
     padding-inline: 0.5rem;
     transition: all 0.2s ease-in-out;
 
-    @media screen and (max-height: 700px), screen and (max-width: 600px) {
+    @media screen and (max-height: 700px),
+    screen and (max-width: 600px) {
       font-size: 0.7rem;
     }
   }
@@ -206,6 +208,7 @@
     text-align: center;
     text-transform: uppercase;
     text-shadow: 0px 0px 14.815px rgba(154, 240, 244, 0.7);
+
     &:hover {
       color: var(--primary);
       cursor: default;
@@ -220,6 +223,7 @@
     font-size: 2vh;
     text-shadow: 0px 0px 14.815px rgba(154, 240, 244, 0.7);
     transition: all 0.2s ease-in-out;
+
     &:hover {
       text-shadow: 0px 0px 14.815px var(--hover-link);
     }
@@ -266,7 +270,7 @@
       height: auto;
       bottom: 70px;
       justify-content: space-around;
-      gap: 40px; 
+      gap: 40px;
       left: 2%;
       width: 95%;
     }
@@ -509,7 +513,7 @@
   display: flex;
   position: fixed;
   top: 165px;
-  bottom: 53px;
+  // bottom: 53px;
   left: 50%;
   transform: translateX(-50%);
   flex-direction: column;
@@ -517,7 +521,7 @@
   align-items: center;
   width: 80vw;
   height: auto;
-  // height: 70vh;
+  height: 70dvh;
   gap: 20px;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -534,6 +538,10 @@
 
   @media screen and (min-width: 700px) {
     display: none;
+  }
+
+  @media screen and (max-height: 720px) {
+    height: 65dvh;
   }
 }
 
